# mdview

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  typedoc.json
.changeset/: README.md  config.json  initial-release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  extension_idea.md  feature_request.md
.github/workflows/: ci.yml  release-desktop.yml  release.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/e2e/: render.spec.ts  welcome.spec.ts
apps/desktop/scripts/: fix-gatekeeper.command
apps/desktop/src/: App.tsx  ipc.ts  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mdview-sh/: astro.config.mjs  package.json  wrangler.toml
docs/: 01-PRD-and-Plan.md  02-Format-Spec.md  03-Feature-Backlog.md  demo.md  desktop-auto-update.md  extensions.md  getting-started.md  host-actions.md  index.md  plugin-authoring.md  release.md
docs/branding/: README.md
docs/cookbook/: README.md  api-doc.md  book-note.md  product-prd.md  tech-blog.md
docs/launch-materials/: README.md  blog-post.md  hn-post.md  twitter-thread.md
docs/skills/: README.md
scripts/: build-cdn.js  bump-desktop.js  process-brand-logos.mjs  release-all.js  release-check.js
(+40 files in other folders)
