[package]
name = "mdview-desktop"
version = "0.0.4"
description = "mdview desktop reader"
authors = ["mdview contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.77"

[lib]
name = "mdview_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
